# docsmith

./: .env.example  02-docsmith.md  README.md  pyproject.toml  ruff.toml
src/docsmith/: config.py
src/docsmith/agents/: api_extractor.py  architect.py  diagram_gen.py  explorer.py  graph.py  guide_writer.py  reviewer.py  state.py
src/docsmith/analysis/: __init__.py  complexity.py  coverage.py  dependency.py  diff.py
src/docsmith/cli/: app.py  diff.py  run.py  serve.py  watch.py
src/docsmith/ingestion/: __init__.py  chunker.py  embedder.py  languages.py  parser.py  walker.py
src/docsmith/models/: __init__.py  code.py
src/docsmith/renderers/: __init__.py  markdown.py  mermaid.py  server.py
src/docsmith/storage/: __init__.py  chroma.py  state.py
tests/: conftest.py
tests/agents/: test_graph.py
tests/analysis/: test_coverage.py  test_dependency.py
tests/fixtures/: sample.py
tests/ingestion/: test_parser.py  test_walker.py
